# ChangeLog for media-libs/libmustux
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libmustux/Attic/ChangeLog,v 1.14 2004/06/24 23:12:46 agriffis Exp $

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> libmustux-0.16.0.ebuild:
  Add inherit eutils

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> libmustux-0.16.0.ebuild:
  Add die following econf for bug 48950

  25 Apr 2004; Aron Griffis <agriffis@gentoo.org> libmustux-0.17.5.ebuild:
  Add die following econf for bug 48950

  17 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libmustux-0.20.1.ebuild:
  Stable x86.

  09 Apr 2004; David Holm <dholm@gentoo.org> libmustux-0.20.0.ebuild,
  libmustux-0.20.1.ebuild:
  Added to ~ppc.

*libmustux-0.20.1 (16 Mar 2004)

  08 Apr 2004; Marc Hildebrand <zypher@gentoo.org> protux-0.20.1.ebuild:
  Version bumped.

  26 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libmustux-0.16.0.ebuild, libmustux-0.17.5.ebuild, libmustux-0.20.0.ebuild:
  Stable on x86.  Removing explicit S=

  09 Feb 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libmustux-0.16.0.ebuild, libmustux-0.17.5.ebuild:
  Added automake/autoconf dependency.

  09 Feb 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libmustux-0.16.0.ebuild, libmustux-0.17.5.ebuild, libmustux-0.20.0.ebuild:
  Fixing qt's moc detection (Bug #38966).

  01 Feb 2004; Brian Harring <ferringb@gentoo.org> libmustux-0.16.0.ebuild,
  files/libmustux-0.16.0-alsalib-fix.patch:
  Alsalib-1.0 compilation fix (39092)

*libmustux-0.20.0 (20 Dec 2003)

  20 Dec 2003; Martin Holzer <mholzer@gentoo.org> libmustux-0.20.0.ebuild:
  Version bumped

*libmustux-0.17.5 (22 Jun 2003)

  22 Jun 2003; jje <jje@gentoo.org> libmustux-0.17.5.ebuild:
  Version bump.
  
  Submitted by: Marc Hildebrand <marc.hildebrand@t-online.de>

*libmustux-0.16.0 (09 Mar 2003)

  09 Mar 2003; jje <jje@gentoo.org> libmustux-0.16.0.ebuild: