@@ -1,11 +1,11 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libmustux/Attic/libmustux-0.20.2.ebuild,v 1.1 2004/06/29 14:16:20 zypher Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libmustux/Attic/libmustux-0.20.2.ebuild,v 1.2 2004/07/13 05:26:58 eradicator Exp $
 
 inherit kde-functions
 
 DESCRIPTION="Protux - Libary"
-HOMEPAGE="http://www.nognu.org/protux"
+HOMEPAGE="http://www.nongnu.org/protux"
 SRC_URI="http://vt.shuis.tudelft.nl/~remon/protux/stable/version-${PV}/${P}.tar.gz"
 
 IUSE="static"
